--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.36.1",
     "@supabase/supabase-js": "^2.87.0",
     "drizzle-orm": "^0.45.0",
+    "lucide-react": "^0.560.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
